--- a/templates/genre.html
+++ b/templates/genre.html
@@ -106,6 +106,9 @@
             function onClickMypage() {
                 $(location).attr('href', '/mypage');
             }
+            function onClickdetail(id) {
+                location.href="/detail?movie="+id
+            }
             let selectgenre = [];
             let selectnation = [];
             let selectgenrename = [];
@@ -182,7 +185,7 @@
                                                 </div>
                                                 <div class="movie-content">
                                                     <div class="movie-content-header">
-                                                        <a href="${base_url}${id}">
+                                                        <a href="#" onclick="onClickdetail(${id})">
                                                             <h3 class="movie-title movietitle-font">${index + 1}. ${title}</h3>
                                                         </a>
                                                         <div></div>
@@ -240,7 +243,7 @@
         </nav>
         <nav class="navbar navbar-dark">
           <form class="form-inline">
-            <a class="btn btn-outline-light" role="button" onclick="onClickBtnLogOut()">Logout</a>
+            <a class="btn btn-outline-light" role="button" href="#" onclick="onClickBtnLogOut()">Logout</a>
           </form>
         </nav>
     </div>
