--- a/templates/mypage.html
+++ b/templates/mypage.html
@@ -53,7 +53,6 @@
         .jumbotron-style{
             border-radius: 15px;
             font-family: 'Gamja Flower', cursive;
-            background-color: lightgoldenrodyellow;
             padding: 30px;
         }
         .jumbo-font{
@@ -231,7 +230,7 @@
     </nav>
 </header>
     <div class="wrap">
-        <div class="jumbotron jumbotron-style">
+        <div class="jumbotron jumbotron-style" style="background-color: lightgoldenrodyellow">
             <h1 class="display-4">🧐당신의 취향을 반영한 분석결과를 보여드릴게요</h1>
             <p class="lead"><font class="jumbo-font">이용해 주셔서 감사합니다🐹</font></p>
         </div>
@@ -279,6 +278,9 @@
             </div>
         </div>
     </div>
+        <div class="jumbotron jumbotron-style" style="background-color:#C1AEEE">
+            <h1 class="display-6">🤖당신의 취향을 반영한 영화 추천</h1>
+        </div>
         <table class="table table-dark list-wrap" style="border-radius: 10px">
           <thead>
             <tr>
