--- a/templates/selectMovie.html
+++ b/templates/selectMovie.html
@@ -205,7 +205,7 @@
                                                             <a href="#" onclick="show_update_btn()" style="color: black;text-decoration: none">
                                                                 🔄
                                                             </a>
-                                                            <a href="#" onclick="delete_movie()" style="text-decoration: none">❌
+                                                            <a href="#" onclick="delete_movie(${id})" style="text-decoration: none">❌
                                                             </a></h5>
                                                     </div>`;
                     $('.starRev').hide();
