--- a/templates/signUp.html
+++ b/templates/signUp.html
@@ -10,7 +10,7 @@
 
     <style>
         .background {
-            background-image: url("https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FQsGoG%2FbtqCxQ1YNSO%2F8qWHNtEqr4Yh0SYKNXG7Rk%2Fimg.png");
+            background-image: url("/static/logo2.JPG");
             background-repeat:no-repeat;
             background-position:top center;
             background-size:cover;
@@ -72,7 +72,7 @@
 
     <!-- Icon -->
     <div class="fadeIn first">
-      <img class="size" src="/static/Logo.jpg" id="icon" alt="User Icon">
+      <img class="size" src="/static/logo2.JPG" id="icon" alt="User Icon">
     </div>
 
     <!-- Login Form -->
