--- a/templates/detail.html
+++ b/templates/detail.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="{{url_for('static', filename='style.css')}}" rel="stylesheet">
 
     <!-- JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -26,21 +27,11 @@
     <title>Movie delivery</title>
 </head>
 <style>
-    * {
-        font-family: 'Noto Sans KR', sans-serif;
-    }
-    .site-title-font {
-        color: red;
-        font-family: 'Srisakdi', cursive;
-        font-size: 27px;
-    }
-    .navbar-background{
-        background-color: black;
-        opacity: 80%;
-    }
-    body{
-        background: #000;
-    }
+    .wrap {
+            width: 1100px;
+            margin: auto;
+            margin-top: 50px;
+        }
     .background-image{
         background-size: cover;
         clip-path: ellipse(1800px 600px at 20% 0%);
@@ -288,7 +279,7 @@
 <body>
 <header>
   <nav class="navbar navbar-expand-md navbar-dark fixed-top navbar-background">
-        <a class="navbar-brand" href="#" onclick="onClickHome()"><font class="site-title-font">Movie<font style="font-size: 12px" class="site-title-font">Delivery</font></font></a>
+        <a class="navbar-brand" href="#" onclick="onClickHome()"><img src="/static/logo3.JPG" alt="User Icon"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
