--- a/templates/signUp.html
+++ b/templates/signUp.html
@@ -2,23 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <title>SignUp</title>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <link href="{{url_for('static', filename='login.css')}}" rel="stylesheet" id="login-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
     <style>
-        .background {
-            background-image: url("/static/logo2.JPG");
-            background-repeat:no-repeat;
-            background-position:top center;
-            background-size:cover;
-        }
         .size{
             margin-top: 40px;
             margin-bottom:20px;
             size:300px;
+        }
+        #nickname {
+            margin-bottom: 40px;
+        }
+        input[type=button]{
+            margin-bottom: 60px;
         }
     </style>
     <script>
@@ -77,10 +77,10 @@
 
     <!-- Login Form -->
     <form>
-      <input type="text" id="userID" class="fadeIn second" name="userID" placeholder="ID">
-      <input type="text" id="password" class="fadeIn third" name="password" placeholder="Password">
+        <input type="text" id="userID" class="fadeIn second" name="userID" placeholder="ID">
+        <input type="text" id="password" class="fadeIn third" name="password" placeholder="Password">
         <input type="text" id="nickname" class="fadeIn third" name="nickname" placeholder="nickname">
-      <input type="button" onclick="signup()" class="fadeIn fourth" value="Sign Up">
+        <input type="button" onclick="signup()" class="fadeIn fourth" value="Sign Up">
     </form>
 
 
