--- a/static/login.css
+++ b/static/login.css
@@ -1,200 +1,184 @@
-.size{
-            margin-top: 40px;
-            margin-bottom:20px;
-            size:300px;
-        }
-        /**/
-        /* BASIC */
-        body {
-            background-color: black;
-          font-family: "Poppins", sans-serif;
-          height: 100vh;
-        }
-        
-        /* STRUCTURE */
-        .wrapper {
-          display: flex;
-          align-items: center;
-          flex-direction: column;
-          justify-content: center;
-          width: 100%;
-          min-height: 100%;
-          padding: 20px;
-        }
+.background {
+    background: url("/static/login_background3.jpg") repeat;
+    background-size: 30%;
+}
+.background .bg-1 {
+    position: absolute;
+    background: rgba(0,0,0,0.7);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+/* STRUCTURE */
+.wrapper {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    min-height: 100%;
+    padding: 20px;
+}
+ #formContent {
+     -webkit-border-radius: 10px 10px 10px 10px;
+     border-radius: 10px 10px 10px 10px;
+     background: #000;
+     opacity: 93%;
+     padding: 30px;
+     width: 90%;
+     max-width: 450px;
+     position: relative;
+     padding: 0px;
+     -webkit-box-shadow: 0 30px 60px 0 rgba(255,255,255,0.3);
+     box-shadow: 0 100px 200px 0 rgba(255,255,255,0.3);
+     text-align: center;
+ }
 
-        #formContent {
-          -webkit-border-radius: 10px 10px 10px 10px;
-          border-radius: 10px 10px 10px 10px;
-          background: #000;
-          padding: 30px;
-          width: 90%;
-          max-width: 450px;
-          position: relative;
-          padding: 0px;
-          -webkit-box-shadow: 0 30px 60px 0 rgba(255,255,255,0.5);
-          box-shadow: 0 100px 200px 0 rgba(255,255,255,0.5);
-          text-align: center;
-        }
+/* FORM TYPOGRAPHY*/
+input[type=button], input[type=submit], input[type=reset]  {
+    background-color: #496697;
+    border: none;
+    color: white;
+    padding: 15px 80px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    text-transform: uppercase;
+    font-size: 13px;
+    border-radius: 5px 5px 5px 5px;
+    margin: 5px 17px 10px 17px;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -ms-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
 
-        #formFooter {
-          background-color: #f6f6f6;
-          border-top: 1px solid #dce8f1;
-          padding: 25px;
-          text-align: center;
-          -webkit-border-radius: 0 0 10px 10px;
-          border-radius: 0 0 10px 10px;
-        }
+input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover  {
+    background-color: #315aa0;
+}
 
-        /* FORM TYPOGRAPHY*/
-        input[type=button], input[type=submit], input[type=reset]  {
-          background-color: #496697;
-          border: none;
-          color: white;
-          padding: 15px 80px;
-          text-align: center;
-          text-decoration: none;
-          display: inline-block;
-          text-transform: uppercase;
-          font-size: 13px;
-          border-radius: 5px 5px 5px 5px;
-          margin: 5px 17px 15px 17px;
-          -webkit-transition: all 0.3s ease-in-out;
-          -moz-transition: all 0.3s ease-in-out;
-          -ms-transition: all 0.3s ease-in-out;
-          -o-transition: all 0.3s ease-in-out;
-          transition: all 0.3s ease-in-out;
-        }
+input[type=button]:active, input[type=submit]:active, input[type=reset]:active  {
+    -moz-transform: scale(0.90);
+    -webkit-transform: scale(0.90);
+    -o-transform: scale(0.90);
+    -ms-transform: scale(0.90);
+    transform: scale(0.90);
+}
 
-        input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover  {
-          background-color: #315aa0;
-        }
+input[type=text] {
+    background-color: #353535;
+    border: none;
+    color: #ffffff;
+    padding: 15px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 5px;
+    width: 73%;
+    border: 2px solid #212121;
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -ms-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+    -webkit-border-radius: 5px 5px 5px 5px;
+    border-radius: 5px 5px 5px 5px;
+}
 
-        input[type=button]:active, input[type=submit]:active, input[type=reset]:active  {
-          -moz-transform: scale(0.95);
-          -webkit-transform: scale(0.95);
-          -o-transform: scale(0.95);
-          -ms-transform: scale(0.95);
-          transform: scale(0.95);
-        }
+input[type=text]:focus {
+    background-color: #000;
+    border-bottom: 2px solid #496697;
+}
 
-        input[type=text] {
-          background-color: #353535;
-          border: none;
-          color: #ffffff;
-          padding: 15px 32px;
-          text-align: center;
-          text-decoration: none;
-          display: inline-block;
-          font-size: 16px;
-          margin: 5px;
-          width: 80%;
-          border: 2px solid #212121;
-          -webkit-transition: all 0.5s ease-in-out;
-          -moz-transition: all 0.5s ease-in-out;
-          -ms-transition: all 0.5s ease-in-out;
-          -o-transition: all 0.5s ease-in-out;
-          transition: all 0.5s ease-in-out;
-          -webkit-border-radius: 5px 5px 5px 5px;
-          border-radius: 5px 5px 5px 5px;
-        }
+input[type=text]::placeholder {
+    color: #cccccc;
+}
+/* ANIMATIONS */
+/* Simple CSS3 Fade-in-down Animation */
+.fadeInDown {
+    -webkit-animation-name: fadeInDown;
+    animation-name: fadeInDown;
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
 
-        input[type=text]:focus {
-          background-color: #000;
-          border-bottom: 2px solid #496697;
-        }
+@-webkit-keyframes fadeInDown {
+    0% {
+        opacity: 0;
+        -webkit-transform: translate3d(0, -100%, 0);
+        transform: translate3d(0, -100%, 0);
+    }
+    100% {
+        opacity: 1;
+        -webkit-transform: none;
+        transform: none;
+    }
+}
+@keyframes fadeInDown {
+    0% {
+        opacity: 0;
+        -webkit-transform: translate3d(0, -100%, 0);
+        transform: translate3d(0, -100%, 0);
+    }
+    100% {
+        opacity: 1;
+        -webkit-transform: none;
+        transform: none;
+    }
+}
+/* Simple CSS3 Fade-in Animation */
+@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
 
-        input[type=text]::placeholder {
-          color: #cccccc;
-        }
+.fadeIn {
+    opacity:0;
+    -webkit-animation:fadeIn ease-in 1;
+    -moz-animation:fadeIn ease-in 1;
+    animation:fadeIn ease-in 1;
+    -webkit-animation-fill-mode:forwards;
+    -moz-animation-fill-mode:forwards;
+    animation-fill-mode:forwards;
+    -webkit-animation-duration:1s;
+    -moz-animation-duration:1s;
+    animation-duration:1s;
+}
 
-        /* ANIMATIONS */
+.fadeIn.first {
+    -webkit-animation-delay: 0.4s;
+    -moz-animation-delay: 0.4s;
+    animation-delay: 0.4s;
+}
 
-        /* Simple CSS3 Fade-in-down Animation */
-        .fadeInDown {
-          -webkit-animation-name: fadeInDown;
-          animation-name: fadeInDown;
-          -webkit-animation-duration: 1s;
-          animation-duration: 1s;
-          -webkit-animation-fill-mode: both;
-          animation-fill-mode: both;
-        }
+.fadeIn.second {
+    -webkit-animation-delay: 0.6s;
+    -moz-animation-delay: 0.6s;
+    animation-delay: 0.6s;
+}
 
-        @-webkit-keyframes fadeInDown {
-          0% {
-            opacity: 0;
-            -webkit-transform: translate3d(0, -100%, 0);
-            transform: translate3d(0, -100%, 0);
-          }
-          100% {
-            opacity: 1;
-            -webkit-transform: none;
-            transform: none;
-          }
-        }
+.fadeIn.third {
+    -webkit-animation-delay: 0.8s;
+    -moz-animation-delay: 0.8s;
+    animation-delay: 0.8s;
+}
 
-        @keyframes fadeInDown {
-          0% {
-            opacity: 0;
-            -webkit-transform: translate3d(0, -100%, 0);
-            transform: translate3d(0, -100%, 0);
-          }
-          100% {
-            opacity: 1;
-            -webkit-transform: none;
-            transform: none;
-          }
-        }
+.fadeIn.fourth {
+    -webkit-animation-delay: 1s;
+    -moz-animation-delay: 1s;
+    animation-delay: 1s;
+}
 
-        /* Simple CSS3 Fade-in Animation */
-        @-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-        @-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-        @keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-
-        .fadeIn {
-          opacity:0;
-          -webkit-animation:fadeIn ease-in 1;
-          -moz-animation:fadeIn ease-in 1;
-          animation:fadeIn ease-in 1;
-
-          -webkit-animation-fill-mode:forwards;
-          -moz-animation-fill-mode:forwards;
-          animation-fill-mode:forwards;
-
-          -webkit-animation-duration:1s;
-          -moz-animation-duration:1s;
-          animation-duration:1s;
-        }
-
-        .fadeIn.first {
-          -webkit-animation-delay: 0.4s;
-          -moz-animation-delay: 0.4s;
-          animation-delay: 0.4s;
-        }
-
-        .fadeIn.second {
-          -webkit-animation-delay: 0.6s;
-          -moz-animation-delay: 0.6s;
-          animation-delay: 0.6s;
-        }
-
-        .fadeIn.third {
-          -webkit-animation-delay: 0.8s;
-          -moz-animation-delay: 0.8s;
-          animation-delay: 0.8s;
-        }
-
-        .fadeIn.fourth {
-          -webkit-animation-delay: 1s;
-          -moz-animation-delay: 1s;
-          animation-delay: 1s;
-        }
-
-        /* OTHERS */
-
-        *:focus {
-            outline: none;
-        }
-
-        #icon {
-          width:60%;
-        }
+/* OTHERS */
+*:focus {
+    outline: none;
+}
+#icon {
+    margin-top: 20px;
+    margin-bottom:20px;
+    width:80%;
+}
