--- a/templates/signUp.html
+++ b/templates/signUp.html
@@ -57,8 +57,9 @@
             }
     </script>
 </head>
-<body class="background">
-    <div class="bg-1">
+<body>
+    <div class="stars"></div>
+    <div class="twinkling">
         <div class="wrapper fadeInDown">
           <div id="formContent">
             <div class="fadeIn first">
