--- a/static/login.css
+++ b/static/login.css
@@ -1,16 +1,92 @@
-.background {
-    background: url("/static/login_background3.jpg") repeat;
-    background-size: 30%;
+@font-face {
+    font-family: 'CookieRunOTF-Black';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_twelve@1.0/CookieRunOTF-Black00.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
 }
-.background .bg-1 {
-    position: absolute;
-    background: rgba(0,0,0,0.7);
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
+/*star background*/
+* {
+    margin: 0;
+    padding: 0;
 }
-/* STRUCTURE */
+header {
+    background-color:rgba(33, 33, 33, 0.9);
+    color:#ffffff;
+    display:block;
+    font: 14px/1.3 Arial,sans-serif;
+    height:50px;
+    position:relative;
+    z-index:5;
+}
+h2{
+    margin-top: 30px;
+    text-align: center;
+}
+header h2{
+    font-size: 22px;
+    margin: 0 auto;
+    padding: 10px 0;
+    width: 80%;
+    text-align: center;
+}
+header a, a:visited {
+    text-decoration:none;
+    color:#fcfcfc;
+}
+
+@keyframes move-twink-back {
+    from {background-position:0 0;}
+    to {background-position:-10000px 5000px;}
+}
+@-webkit-keyframes move-twink-back {
+    from {background-position:0 0;}
+    to {background-position:-10000px 5000px;}
+}
+@-moz-keyframes move-twink-back {
+    from {background-position:0 0;}
+    to {background-position:-10000px 5000px;}
+}
+@-ms-keyframes move-twink-back {
+    from {background-position:0 0;}
+    to {background-position:-10000px 5000px;}
+}
+
+.stars, .twinkling {
+  position:absolute;
+  top:0;
+  left:0;
+  right:0;
+  bottom:0;
+  width:100%;
+  height:100%;
+  display:block;
+}
+
+.stars {
+  background:#000 url(http://www.script-tutorials.com/demos/360/images/stars.png) repeat top center;
+  z-index:0;
+}
+
+.twinkling{
+  background:transparent url(http://www.script-tutorials.com/demos/360/images/twinkling.png) repeat top center;
+  z-index:1;
+
+  -moz-animation:move-twink-back 200s linear infinite;
+  -ms-animation:move-twink-back 200s linear infinite;
+  -o-animation:move-twink-back 200s linear infinite;
+  -webkit-animation:move-twink-back 200s linear infinite;
+  animation:move-twink-back 200s linear infinite;
+}
+
+/*login form*/
+*:focus {
+    outline: none;
+}
+#icon {
+    margin-top: 60px;
+    margin-bottom:20px;
+    width:80%;
+}
 .wrapper {
     display: flex;
     align-items: center;
@@ -30,22 +106,22 @@
      max-width: 450px;
      position: relative;
      padding: 0px;
-     -webkit-box-shadow: 0 30px 60px 0 rgba(255,255,255,0.3);
-     box-shadow: 0 100px 200px 0 rgba(255,255,255,0.3);
+     -webkit-box-shadow: 0 30px 60px 0 rgba(18,226,164,0.3);
+     box-shadow: 0 100px 200px 0 rgba(18,226,164,0.3);
      text-align: center;
  }
 
-/* FORM TYPOGRAPHY*/
 input[type=button], input[type=submit], input[type=reset]  {
-    background-color: #496697;
+    font-family: 'CookieRunOTF-Black';
+    background-color: #14dba0;
     border: none;
-    color: white;
+    color: black;
     padding: 15px 80px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     text-transform: uppercase;
-    font-size: 13px;
+    font-size: 17px;
     border-radius: 5px 5px 5px 5px;
     margin: 5px 17px 10px 17px;
     -webkit-transition: all 0.3s ease-in-out;
@@ -56,7 +132,7 @@ input[type=button], input[type=submit], input[type=reset]  {
 }
 
 input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover  {
-    background-color: #315aa0;
+    background-color: white;
 }
 
 input[type=button]:active, input[type=submit]:active, input[type=reset]:active  {
@@ -96,8 +172,7 @@ input[type=text]:focus {
 input[type=text]::placeholder {
     color: #cccccc;
 }
-/* ANIMATIONS */
-/* Simple CSS3 Fade-in-down Animation */
+/*login form animation*/
 .fadeInDown {
     -webkit-animation-name: fadeInDown;
     animation-name: fadeInDown;
@@ -106,7 +181,6 @@ input[type=text]::placeholder {
     -webkit-animation-fill-mode: both;
     animation-fill-mode: both;
 }
-
 @-webkit-keyframes fadeInDown {
     0% {
         opacity: 0;
@@ -131,7 +205,6 @@ input[type=text]::placeholder {
         transform: none;
     }
 }
-/* Simple CSS3 Fade-in Animation */
 @-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
 @-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
 @keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
@@ -171,14 +244,4 @@ input[type=text]::placeholder {
     -webkit-animation-delay: 1s;
     -moz-animation-delay: 1s;
     animation-delay: 1s;
-}
-
-/* OTHERS */
-*:focus {
-    outline: none;
-}
-#icon {
-    margin-top: 20px;
-    margin-bottom:20px;
-    width:80%;
 }
